--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
 <h1>Jovany Cortez Marure</h1>
+<h2>About</h2>
+<p1>Hi! My name is Jovany, and i am part of Code the Dream. I have a been coding since 2013 and is something that I thoroughly enjoy doing. On my free time, I enjoy playing video games and play soccer with my friends.</p1>
+<h1>Experience</h1>
+<p1>Mcdonalds, Cashier : 2015 - 2016
+    La Fiesta restaurant, Waiter : 2016 - 2019
+    LC America, Packer : 2019-2020
+    The Building Center, Book Keeper : Current 
+</p1>
+<h1>Connect</h1>
+<p1>Email: jovanycortezm@gmail.com</p1>
+<p2>GitHub: https://github.com/JovaCov</p2>
