--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <title>JovaCov</title>
+        <meta charset="UTF-8">
+        <meta name="Description" content="Jovanys Personal Site">
+        <meta name="author" content="Jovany Cortes Marure">
         <style>
             body {background-color: rgb(35, 187, 207);}
             h1 {color: rgb(230, 68, 189);}
@@ -22,6 +25,12 @@
     The Building Center, Book Keeper : Current<br> 
 </p1>
 </section>
+<section id="skills">
+    <h2>Skills</h2>
+    <ul>
+        
+    </ul>
+</section>
 <section>
 <h1>Connect</h1>
 <ul>
@@ -30,5 +39,9 @@
      
 </ul>
 </section>
+<footer>
+
+</footer>
+<script src="js/index.js"></script>
 </body>
 </html>
