--- a/index.html
+++ b/index.html
@@ -39,6 +39,24 @@
      
 </ul>
 </section>
+<section>
+    <h2>Leave a Message!</h2>
+    <form name="leave_message">
+        <label for="name">Name:</label><br>
+        <input type="text" name="name" required=true><br>
+        <label for="email">Email:</label><br>
+        <input type="email" name="email" required=true><br>
+        <label for="message">Message:</label><br>
+        <textarea name="message" required=true></textarea><br>
+        <button type="submit">Submit</button>
+    </form>
+</section>
+<section id="message">
+    <h2>Messages</h2>
+    <ul>
+
+    </ul>
+</section>
 <footer>
 
 </footer>
